# kactl

./: .gitignore  .hgignore  Global.h  KACTL.icproj  KACTL.sln  KACTL.vcproj  Makefile  README.md  TODO.md  Template.cpp  compile-header.sh  global.h  kactl.tex  kactlpkg.sty  kactlprocessor.py  makefile  mall.cpp  mustBeAdded.txt  prueba.cpp  pruebaout.cpp  runtests.sh  test-compiles.sh  todo.md
.github/: pull_request_template.md
.verify-helper/: config.toml
Example/: Example.h
content/: hackpack.tex  kactl.fdb_latexmk  kactl.fls  kactl.tex
content/contest/: .bashrc  .vimrc  CMakeLists.txt  JavaExample.java  chapter.tex  cmp.sh  compileAndRun.txt  debug.cpp  fightFight.sublime-build  hash-cpp.sh  hash.sh  make_scripts.sh  problemInteraction.sh  template.cpp  tester.py  troubleshoot.txt
doc/: README  README_repository.txt  TODO.txt  example.h  makefile  modmul-proof.md  modmul-proof.tex  strategy.tex  techniques.txt
example/: example.h
fuzz-tests/: binomial.cpp  continued-fractions.cpp  factor.cpp  fast-mod.cpp  fft.cpp  frac-binary-search.cpp  fst.cpp  hull-intersection.cpp  idet.cpp  insidePolygon.cpp  interval-container.cpp  kmp.cpp  lazy-segment-tree.cpp  linear-recurrence.cpp  maximal-cliques.cpp  miller-rabin.cpp  min-rotation.cpp  minimum-enclosing-circle.cpp  modinv.cpp  modmulLL.cpp  modular-arithmetic.cpp  ntt.cpp  polygon-area.cpp  polygon-cut.cpp  polygon-diameter.cpp  primes.cpp  rmq.cpp  run-all.sh  segment-tree.cpp  segmentIntersection.cpp  solvelinear-binary.cpp  solvelinear.cpp  suffix-array.cpp  treap.cpp  tridiagonal.cpp  two-sat.cpp  (+1 more)
(+776 files in other folders)
