cmake_minimum_required(VERSION 3.15)
project(contest)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wconversion -Wshadow -Wfloat-equal -Wfatal-errors -O0 -g -fsanitize=address,undefined")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ..)
set(srcs a b c d e f g h i j k l m)
foreach(F IN LISTS srcs)
  add_executable(${F}.out ${F}.cpp)
endforeach()
# 611a0e